--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_fi.properties
@@ -1,7 +1,11 @@
 align=Align (Automatic Copy)
+background-color=Background Color (Automatic Copy)
 basic-components=Peruskomponentit
 border-color=Border Color (Automatic Copy)
+border-radius=Border Radius (Automatic Copy)
+box-shadow=Box Shadow (Automatic Copy)
 card=Kortti
+content-align=Content Align (Automatic Copy)
 fit=Fit (Automatic Copy)
 h1=H1 (Automatic Copy)
 h2=H2 (Automatic Copy)
