--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hi_IN.properties
@@ -1,7 +1,11 @@
 align=Align (Automatic Copy)
+background-color=Background Color (Automatic Copy)
 basic-components=बुनियादी घटक (Automatic Translation)
 border-color=बॉर्डर रंग (Automatic Translation)
+border-radius=Border Radius (Automatic Copy)
+box-shadow=Box Shadow (Automatic Copy)
 card=कार्ड (Automatic Translation)
+content-align=Content Align (Automatic Copy)
 fit=Fit (Automatic Copy)
 h1=एच 1 (Automatic Translation)
 h2=एच 2 (Automatic Translation)
