--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
@@ -1,7 +1,11 @@
 align=Align (Automatic Copy)
+background-color=Background Color (Automatic Copy)
 basic-components=Components bàsics
 border-color=Color de la vora (Automatic Translation)
+border-radius=Border Radius (Automatic Copy)
+box-shadow=Box Shadow (Automatic Copy)
 card=Targeta
+content-align=Content Align (Automatic Copy)
 fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
