--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
@@ -1,7 +1,11 @@
 align=Align (Automatic Copy)
+background-color=Background Color (Automatic Copy)
 basic-components=Componentes básicos
 border-color=Color del borde (Automatic Translation)
+border-radius=Border Radius (Automatic Copy)
+box-shadow=Box Shadow (Automatic Copy)
 card=Tarjeta
+content-align=Content Align (Automatic Copy)
 fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
