--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ro.properties
@@ -1,7 +1,11 @@
 align=Align (Automatic Copy)
+background-color=Background Color (Automatic Copy)
 basic-components=Componente de bază (Automatic Translation)
 border-color=Culoare bordură (Automatic Translation)
+border-radius=Border Radius (Automatic Copy)
+box-shadow=Box Shadow (Automatic Copy)
 card=Card (Automatic Translation)
+content-align=Content Align (Automatic Copy)
 fit=Fit (Automatic Copy)
 h1=H1 (Automatic Translation)
 h2=H2 (Automatic Translation)
