LPS-99409 Build Lang

--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
@@ -66,6 +66,7 @@ less-than-or-equals=По-малко от или равно (Automatic Translatio
 model.resource.com.liferay.segments=Сегменти (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Сегменти запис (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Сегменти опит (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Все още няма добавени сегменти. За да добавите нов сегмент, отидете на меню за продукти > хора > сегменти. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Няма потребители са присвоени на този сегмент. (Automatic Translation)
