--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Méně než nebo se rovná (Automatic Translation)
 model.resource.com.liferay.segments=Segmenty (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmenty vstup (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmenty zkušenosti (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Dosud nebyly přidány žádné segmenty. Chcete-li přidat nový segment, přejděte do nabídky produkt > lidé > segmenty. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Žádní uživatelé byly přiřazeny k tomuto segmentu. (Automatic Translation)
