--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Kleiner als oder gleich
 model.resource.com.liferay.segments=Segmente
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmente-Eintrag
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmente-Erlebnis
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Neue Segmente: {0}
 no-segments-have-been-added-yet=Es wurden noch keine Segmente hinzugefügt. Um ein neues Segment hinzuzufügen, gehen Sie zu Produktmenü > Personen > Segmente.
 no-users-have-been-assigned-to-this-segment=Diesem Segment wurden keine Benutzer zugewiesen.
