--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Μικρότερο ή ίσον (Automatic Translation)
 model.resource.com.liferay.segments=Τμήματα (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Έναρξη τμημάτων (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Τμήματα εμπειρία (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Δεν έχουν προστεθεί ακόμη τμήματα. Για να προσθέσετε ένα νέο τμήμα, μεταβείτε στο μενού προϊόντων. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Οι χρήστες δεν έχουν εκχωρηθεί σε αυτό το τμήμα. (Automatic Translation)
