--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Menor o igual que
 model.resource.com.liferay.segments=Segmentos
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segmentos
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiencia de segmentos
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nuevo segmento de {0}
 no-segments-have-been-added-yet=Aún no se añadió ningún segmento. Para añadir un nuevo segmento, vaya al menú de productos > Personas > Segmentos.
 no-users-have-been-assigned-to-this-segment=No se asignaron usuarios a este segmento.
