--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
@@ -66,6 +66,7 @@ less-than-or-equals=کمتر از یا مساوی با (Automatic Translation)
 model.resource.com.liferay.segments=بخش ها
 model.resource.com.liferay.segments.model.SegmentsEntry=ورود به بخش (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=تجربه بخش (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=هنوز هیچ بخش اضافه نشده است. برای اضافه کردن یک بخش جدید به منوی محصولات > مردم > بخش. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=هیچ کاربری به این بخش اختصاص داده شده اند. (Automatic Translation)
