--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Pienempi tai Yhtäsuuri
 model.resource.com.liferay.segments=Segmentit
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmenttien Merkintä
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmenttien Kokemus
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Uusi {0} Segmentti
 no-segments-have-been-added-yet=Segmenttejä ei ole vielä lisätty. Lisätäksesi uuden segmentin siirry kohtaan Tuotevalikko > Ihmiset > Segmentit.
 no-users-have-been-assigned-to-this-segment=Käyttäjiä ei ole nimetty tähän segmenttiin.
