--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Inférieur ou égal à
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrée de segments
 model.resource.com.liferay.segments.model.SegmentsExperience=Expérience des segments
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nouveau segment {0}
 no-segments-have-been-added-yet=Aucun segment n'a encore été ajouté. Pour ajouter un nouveau segment, allez dans Menu du produit > Personnes > Segments.
 no-users-have-been-assigned-to-this-segment=Aucun utilisateur n'a été affecté à ce segment.
