--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
@@ -66,6 +66,7 @@ less-than-or-equals=इससे कम या बराबर (Automatic Transl
 model.resource.com.liferay.segments=क्षेत्रों (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=सेगमेंट प्रविष्टि (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=सेगमेंट अनुभव (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=अभी तक कोई सेगमेंट नहीं जोड़ा गया है. एक नया खंड जोड़ने के लिए उत्पाद मेनू में जाना [ लोग ] खंड. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=इस सेगमेंट को कोई भी उपयोगकर्ता असाइन नहीं किया गया है. (Automatic Translation)
