--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
@@ -66,6 +66,7 @@ less-than-or-equals=פחות או שווה ל- (Automatic Translation)
 model.resource.com.liferay.segments=מקטעים (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=כניסה מקטעים (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=ניסיון מקטעים (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=לא נוספו עדיין מקטעים. כדי להוסיף מקטע חדש עבור לתפריט מוצר > אנשים > מקטעים. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=אין משתמשים שהוקצו קטע זה. (Automatic Translation)
