--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
@@ -66,6 +66,7 @@ less-than-or-equals=以下
 model.resource.com.liferay.segments=セグメント
 model.resource.com.liferay.segments.model.SegmentsEntry=セグメントのエントリ
 model.resource.com.liferay.segments.model.SegmentsExperience=セグメントのエクスペリエンス
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=新しい {0} セグメント
 no-segments-have-been-added-yet=追加されているセグメントはまだありません。新しいセグメントを追加するには、[プロダクトメニュー] > [連絡先] > [セグメント] に移動してください。
 no-users-have-been-assigned-to-this-segment=このセグメントに割り当てられたユーザーはいません。
