--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
@@ -66,6 +66,7 @@ less-than-or-equals=보다 작거나 같음 (Automatic Translation)
 model.resource.com.liferay.segments=세그먼트 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=세그먼트 항목 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=세그먼트 경험 (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=세그먼트가 아직 추가되지 않았습니다. 새 세그먼트를 추가하려면 제품 메뉴로 이동합니다 . (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=사용자가이 세그먼트에 할당 되었습니다. (Automatic Translation)
