--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Minder dan of gelijk aan
 model.resource.com.liferay.segments=Segmenten
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentinvoer
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentenervaring
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nieuw {0} segment
 no-segments-have-been-added-yet=Er werden nog geen segmenten toegevoegd. Ga naar het Productmenu > Personen > Segmenten om een nieuw segment toe te voegen.
 no-users-have-been-assigned-to-this-segment=Er werden geen gebruikers toegewezen aan dit segment.
