--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Menor que ou igual a
 model.resource.com.liferay.segments=Segmentos
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segmentos
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiência de segmentos
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Novo {0} segmento
 no-segments-have-been-added-yet=Nenhum segmento foi adicionado até o momento. Para adicionar um novo segmento acesse Menu do produto > Pessoas > Segmentos.
 no-users-have-been-assigned-to-this-segment=Nenhum usuário foi designado para este segmento.
