--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_PT.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Less Than or Equals (Automatic Copy)
 model.resource.com.liferay.segments=Segments (Automatic Copy)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segments Entry (Automatic Copy)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segments Experience (Automatic Copy)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Ainda não foram adicionados segmentos. Para adicionar um novo segmento vá para o menu do produto > pessoas > segmentos. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment. (Automatic Copy)
