--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Manj od ali je enako (Automatic Translation)
 model.resource.com.liferay.segments=Segmentov (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentih vnos (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentih izkušnje (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Še ni bilo dodanih segmentov. Če želite dodati nov segment, pojdite na meni Product > ljudje > segmenti. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Noben uporabnik je bila dodeljena na ta segment. (Automatic Translation)
