--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
@@ -66,6 +66,7 @@ less-than-or-equals=น้อยกว่า หรือเท่ากับ (
 model.resource.com.liferay.segments=เซ็กเมนต์ (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=ส่วนรายการ (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=ประสบการณ์เซ็กเมนต์ (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=ยังไม่มีการเพิ่มเซ็กเมนต์ หากต้องการเพิ่มเซ็กเมนต์ใหม่ไปที่เมนูผลิตภัณฑ์ > คน > เซ็กเมนต์ (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=ผู้ใช้ไม่ได้ถูกกำหนดให้กับกลุ่มนี้ (Automatic Translation)
