--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
@@ -66,6 +66,7 @@ less-than-or-equals=小于或等于
 model.resource.com.liferay.segments=细分
 model.resource.com.liferay.segments.model.SegmentsEntry=细分条目
 model.resource.com.liferay.segments.model.SegmentsExperience=细分体验
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=新的 {0} 细分
 no-segments-have-been-added-yet=尚未添加任何细分。要添加新细分，请转到"产品菜单 > 人员 > 细分"。
 no-users-have-been-assigned-to-this-segment=尚没有用户分配到此细分。
