--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Inferiors a o iguals
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segments
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiència de segments
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nou {0} segment
 no-segments-have-been-added-yet=Encara no s'ha afegit cap segment. Per afegir un segment nou aneu a Menú de producte > Persones > Segments.
 no-users-have-been-assigned-to-this-segment=No s'ha assignat cap usuari a aquest segment.
