--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Väiksem kui või võrdub (Automatic Translation)
 model.resource.com.liferay.segments=Segmentide (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentide kanne (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentide kogemus (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Ühtegi segmenti pole veel lisatud. Uue segmendi lisamiseks minge jaotisse Tootemenüü > inimesed > segmendid. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Ükski kasutaja määratud selles segmendis. (Automatic Translation)
