--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Kisebb vagy egyenlő
 model.resource.com.liferay.segments=Szegmensek
 model.resource.com.liferay.segments.model.SegmentsEntry=Szegmensek megadása
 model.resource.com.liferay.segments.model.SegmentsExperience=Szegmensek élménye
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Új {0} szegmens
 no-segments-have-been-added-yet=Még nincsenek hozzáadva szegmensek. Új szegmens hozzáadásához válassza a Termék menü > Emberek > Szegmensek elemét.
 no-users-have-been-assigned-to-this-segment=Nincs felhasználó hozzárendelve ehhez a szegmenshez.
