--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Kurang dari atau sama dengan (Automatic Translation)
 model.resource.com.liferay.segments=Segmen (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmen entri (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmen pengalaman (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Tidak ada segmen telah ditambahkan belum. Untuk menambahkan segmen baru, buka menu produk > orang > segmen. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Tidak ada pengguna yang telah ditetapkan untuk segmen ini. (Automatic Translation)
