--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Meno di o uguale a (Automatic Translation)
 model.resource.com.liferay.segments=Segmenti (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Voce di segmenti (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Esperienza di segmenti (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Non sono stati ancora aggiunti segmenti. Per aggiungere un nuovo segmento vai a Menu Prodotto > Persone > Segmenti. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Gli utenti non sono stati assegnati a questo segmento. (Automatic Translation)
