--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Mindre än eller lika med
 model.resource.com.liferay.segments=Segment
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentpost
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentupplevelse
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nytt {0} segment
 no-segments-have-been-added-yet=Inga segment har lagts till än. För att lägga till ett nytt segment går du till Produktmeny > Personer > Segment.
 no-users-have-been-assigned-to-this-segment=Inga användare har tilldelats till det här segmentet.
