--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Менше або дорівнює (Automatic Translation)
 model.resource.com.liferay.segments=Сегменти (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Сегменти запис (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Сегменти досвід (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Жодних сегментів ще не додано. Щоб додати новий сегмент перейти до меню продукту > люди > сегменти. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Немає користувачів були призначені для цього сегменту. (Automatic Translation)
