--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Nhỏ hơn hoặc bằng (Automatic Translation)
 model.resource.com.liferay.segments=Phân đoạn (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Các phân đoạn mục (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Phân đoạn kinh nghiệm (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-segments-have-been-added-yet=Không có phân đoạn nào được thêm vào. Để thêm phân đoạn mới, hãy chuyển đến menu sản phẩm > mọi người > phân đoạn. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Không có người sử dụng đã được giao cho phân khúc này. (Automatic Translation)
