LPS-99409 Build Lang

--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
@@ -77,6 +77,7 @@ less-than-or-equals=أقل من أو يساوي
 model.resource.com.liferay.segments=الأجزاء
 model.resource.com.liferay.segments.model.SegmentsEntry=إدخال المقاطع
 model.resource.com.liferay.segments.model.SegmentsExperience=خبرة المقاطع
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment={0} مقطع (مقاطع) جديدة
 no-active-tests-were-found-for-the-selected-experience=لم يتم العثور على اختبارات نشطة للتجربة المحددة. (Automatic Translation)
 no-segments-have-been-added-yet=لم تتم إضافة المقاطع بعد. لإضافة مقطع جديد اذهب إلى قائمة المنتجات > الأشخاص > المقاطع.
