--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Inferiors a o iguals
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segments
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiència de segments
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nou {0} segment
 no-active-tests-were-found-for-the-selected-experience=No s'han trobat proves actives per a l'experiència seleccionada.
 no-segments-have-been-added-yet=Encara no s'ha afegit cap segment. Per afegir un segment nou aneu a Menú de producte > Persones > Segments.
