--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Väiksem kui või võrdub (Automatic Translation)
 model.resource.com.liferay.segments=Segmentide (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentide kanne (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentide kogemus (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Valitud kogemuse kohta aktiivseid katseid ei leitud. (Automatic Translation)
 no-segments-have-been-added-yet=Ühtegi segmenti pole veel lisatud. Uue segmendi lisamiseks minge jaotisse Tootemenüü > inimesed > segmendid. (Automatic Translation)
