--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Inférieur ou égal à
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrée de segments
 model.resource.com.liferay.segments.model.SegmentsExperience=Expérience des segments
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nouveau segment {0}
 no-active-tests-were-found-for-the-selected-experience=Aucun test actif n'a été trouvé pour l'expérience sélectionnée. (Automatic Translation)
 no-segments-have-been-added-yet=Aucun segment n'a encore été ajouté. Pour ajouter un nouveau segment, allez dans Menu du produit > Personnes > Segments.
