--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Kurang dari atau sama dengan (Automatic Translation)
 model.resource.com.liferay.segments=Segmen (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmen entri (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmen pengalaman (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Tidak ada tes aktif yang ditemukan untuk pengalaman yang dipilih. (Automatic Translation)
 no-segments-have-been-added-yet=Tidak ada segmen telah ditambahkan belum. Untuk menambahkan segmen baru, buka menu produk > orang > segmen. (Automatic Translation)
