--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Meno di o uguale a (Automatic Translation)
 model.resource.com.liferay.segments=Segmenti (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Voce di segmenti (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Esperienza di segmenti (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Non sono stati trovati test attivi per l'esperienza selezionata. (Automatic Translation)
 no-segments-have-been-added-yet=Non sono stati ancora aggiunti segmenti. Per aggiungere un nuovo segmento vai a Menu Prodotto > Persone > Segmenti. (Automatic Translation)
