--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
@@ -77,6 +77,7 @@ less-than-or-equals=보다 작거나 같음 (Automatic Translation)
 model.resource.com.liferay.segments=세그먼트 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=세그먼트 항목 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=세그먼트 경험 (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=선택한 경험에 대한 활성 테스트를 찾을 수 없습니다. (Automatic Translation)
 no-segments-have-been-added-yet=세그먼트가 아직 추가되지 않았습니다. 새 세그먼트를 추가하려면 제품 메뉴로 이동합니다 . (Automatic Translation)
