--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Menor que ou igual a
 model.resource.com.liferay.segments=Segmentos
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segmentos
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiência de segmentos
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Novo {0} segmento
 no-active-tests-were-found-for-the-selected-experience=Nenhum teste ativo foi encontrado para a experiência selecionada.
 no-segments-have-been-added-yet=Nenhum segmento foi adicionado até o momento. Para adicionar um novo segmento acesse Menu do produto > Pessoas > Segmentos.
