--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Mai mic sau egal cu (Automatic Translation)
 model.resource.com.liferay.segments=Segmente (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmente de intrare (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmente de experienta (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nu s-au găsit teste active pentru experiența selectată. (Automatic Translation)
 no-segments-have-been-added-yet=Nu s-au adăugat segmente încă. Pentru a adăuga un segment nou Du-te la meniul de produse > People > segmente. (Automatic Translation)
