--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
@@ -77,6 +77,7 @@ less-than-or-equals=น้อยกว่า หรือเท่ากับ (
 model.resource.com.liferay.segments=เซ็กเมนต์ (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=ส่วนรายการ (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=ประสบการณ์เซ็กเมนต์ (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=ไม่พบการทดสอบที่ใช้งานอยู่สำหรับประสบการณ์ที่เลือก (Automatic Translation)
 no-segments-have-been-added-yet=ยังไม่มีการเพิ่มเซ็กเมนต์ หากต้องการเพิ่มเซ็กเมนต์ใหม่ไปที่เมนูผลิตภัณฑ์ > คน > เซ็กเมนต์ (Automatic Translation)
