--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Kleiner als oder gleich
 model.resource.com.liferay.segments=Segmente
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmente-Eintrag
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmente-Erlebnis
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Neue Segmente: {0}
 no-active-tests-were-found-for-the-selected-experience=Es wurden keine aktiven Tests für das ausgewählte Erlebnis gefunden.
 no-segments-have-been-added-yet=Es wurden noch keine Segmente hinzugefügt. Um ein neues Segment hinzuzufügen, gehen Sie zu Produktmenü > Personen > Segmente.
