--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Μικρότερο ή ίσον (Automatic Translation)
 model.resource.com.liferay.segments=Τμήματα (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Έναρξη τμημάτων (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Τμήματα εμπειρία (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Δεν εντοπίστηκαν ενεργές δοκιμές για την επιλεγμένη εμπειρία. (Automatic Translation)
 no-segments-have-been-added-yet=Δεν έχουν προστεθεί ακόμη τμήματα. Για να προσθέσετε ένα νέο τμήμα, μεταβείτε στο μενού προϊόντων. (Automatic Translation)
