--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Menor o igual que
 model.resource.com.liferay.segments=Segmentos
 model.resource.com.liferay.segments.model.SegmentsEntry=Entrada de segmentos
 model.resource.com.liferay.segments.model.SegmentsExperience=Experiencia de segmentos
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nuevo segmento de {0}
 no-active-tests-were-found-for-the-selected-experience=No se encontraron pruebas activas para la experiencia seleccionada.
 no-segments-have-been-added-yet=Aún no se añadió ningún segmento. Para añadir un nuevo segmento, vaya al menú de productos > Personas > Segmentos.
