--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
@@ -77,6 +77,7 @@ less-than-or-equals=کمتر از یا مساوی با (Automatic Translation)
 model.resource.com.liferay.segments=بخش ها
 model.resource.com.liferay.segments.model.SegmentsEntry=ورود به بخش (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=تجربه بخش (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=هیچ آزمون فعالی برای تجربه انتخاب شده پیدا نشد. (Automatic Translation)
 no-segments-have-been-added-yet=هنوز هیچ بخش اضافه نشده است. برای اضافه کردن یک بخش جدید به منوی محصولات > مردم > بخش. (Automatic Translation)
