--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ja.properties
@@ -77,6 +77,7 @@ less-than-or-equals=以下
 model.resource.com.liferay.segments=セグメント
 model.resource.com.liferay.segments.model.SegmentsEntry=セグメントのエントリ
 model.resource.com.liferay.segments.model.SegmentsExperience=セグメントのエクスペリエンス
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=新しい {0} セグメント
 no-active-tests-were-found-for-the-selected-experience=選択したエクスペリエンスには有効なテストが見つかりませんでした。
 no-segments-have-been-added-yet=追加されているセグメントはまだありません。新しいセグメントを追加するには、[プロダクトメニュー] > [連絡先] > [セグメント] に移動してください。
