--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_kk.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Less Than or Equals (Automatic Copy)
 model.resource.com.liferay.segments=Segments (Automatic Copy)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segments Entry (Automatic Copy)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segments Experience (Automatic Copy)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience. (Automatic Copy)
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments. (Automatic Copy)
