--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Mažiau arba lygu (Automatic Translation)
 model.resource.com.liferay.segments=Segmentai (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentų įrašas (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentų patirtis (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nėra aktyvių testai pasirinktos patirties. (Automatic Translation)
 no-segments-have-been-added-yet=Dar nepridėta jokių segmentų. Norėdami įtraukti naują segmentą, eikite į produkto meniu > žmonės > segmentai. (Automatic Translation)
