--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Mindre enn eller lik (Automatic Translation)
 model.resource.com.liferay.segments=Segmenter (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmenter oppføring (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmenter erfaring (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Ingen aktive tester ble funnet for den valgte opplevelsen. (Automatic Translation)
 no-segments-have-been-added-yet=Ingen segmenter er lagt til ennå. For å legge til et nytt segment gå til produkt meny > People > segmenter. (Automatic Translation)
