--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Mniej niż lub równa (Automatic Translation)
 model.resource.com.liferay.segments=Segmenty (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmenty wpis (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmenty doświadczenie (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nie znaleziono aktywnych testów dla wybranego doświadczenia. (Automatic Translation)
 no-segments-have-been-added-yet=Nie dodano jeszcze żadnych segmentów. Aby dodać nowy segment, przejdź do menu produktu > osoby > segmenty. (Automatic Translation)
