--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Меньше или равно (Automatic Translation)
 model.resource.com.liferay.segments=Сегменты (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Запись сегментов (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Сегменты опыт (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Активных тестов для выбранного опыта не найдено. (Automatic Translation)
 no-segments-have-been-added-yet=Сегменты еще не добавлены. Чтобы добавить новый сегмент перейдите в меню продукта и люди и сегменты. (Automatic Translation)
