--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Menej ako alebo sa rovná (Automatic Translation)
 model.resource.com.liferay.segments=Segmenty (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmenty vstup (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmenty skúsenosti (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Pre vybrané skúsenosti sa nenašli žiadne aktívne testy. (Automatic Translation)
 no-segments-have-been-added-yet=Zatiaľ neboli pridané žiadne segmenty. Ak chcete pridať nový segment, prejdite do ponuky produkt > ľudia > segmenty. (Automatic Translation)
