--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Manj od ali je enako (Automatic Translation)
 model.resource.com.liferay.segments=Segmentov (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentih vnos (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentih izkušnje (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Za izbrano izkušnjo niso našli nobenih aktivnih testov. (Automatic Translation)
 no-segments-have-been-added-yet=Še ni bilo dodanih segmentov. Če želite dodati nov segment, pojdite na meni Product > ljudje > segmenti. (Automatic Translation)
