--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Mindre än eller lika med
 model.resource.com.liferay.segments=Segment
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentpost
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentupplevelse
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=Nytt {0} segment
 no-active-tests-were-found-for-the-selected-experience=Inga aktiva tester hittades för den valda upplevelsen.
 no-segments-have-been-added-yet=Inga segment har lagts till än. För att lägga till ett nytt segment går du till Produktmeny > Personer > Segment.
