--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
@@ -77,6 +77,7 @@ less-than-or-equals=குறைவான அல்லது சமமான
 model.resource.com.liferay.segments=பிரிவுகள்
 model.resource.com.liferay.segments.model.SegmentsEntry=செக்மெண்ட்களின் என்ட்ரி
 model.resource.com.liferay.segments.model.SegmentsExperience=செக்மெண்ட்களின் அனுபவம்
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=புதிய {0} செக்மெண்ட்
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience. (Automatic Copy)
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments. (Automatic Copy)
