--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Daha az veya eşit (Automatic Translation)
 model.resource.com.liferay.segments=Segmentleri (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Segmentleri giriş (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Segmentleri deneyimi (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Seçilen deneyim için etkin testler bulunamadı. (Automatic Translation)
 no-segments-have-been-added-yet=Henüz segment eklenmedi. Yeni bir segment eklemek için ürün menüsüne gidin > People > segmentleri. (Automatic Translation)
