--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Nhỏ hơn hoặc bằng (Automatic Translation)
 model.resource.com.liferay.segments=Phân đoạn (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=Các phân đoạn mục (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=Phân đoạn kinh nghiệm (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Không tìm thấy bài kiểm tra hoạt động nào cho trải nghiệm đã chọn. (Automatic Translation)
 no-segments-have-been-added-yet=Không có phân đoạn nào được thêm vào. Để thêm phân đoạn mới, hãy chuyển đến menu sản phẩm > mọi người > phân đoạn. (Automatic Translation)
