--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
@@ -77,6 +77,7 @@ less-than-or-equals=小於或等於 (Automatic Translation)
 model.resource.com.liferay.segments=段 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsEntry=段條目 (Automatic Translation)
 model.resource.com.liferay.segments.model.SegmentsExperience=細分體驗 (Automatic Translation)
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test (Automatic Copy)
 new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=未找到所選體驗的活動測試。 (Automatic Translation)
 no-segments-have-been-added-yet=尚未添加任何段。要添加新細分,請訪問"產品功能表">"人員">"細分"。 (Automatic Translation)
